@startuml
title US020 - As a user, I want to get a list (name and user) \n of the publicly published lists of a given genre - CD

skinparam defaultFontName Futura
skinparam backgroundColor CornSilk
skinparam classBackgroundColor WhiteSmoke
skinparam classAttributeIconSize 0


class GetPublicListsByGenreUI {}

package "controller" {
    class GetPublicListsByGenreController {
        +findAllKeys() : List<GenreId>
        +getPublicListsByGenreId(genreId: GenreId): List<ItemId>
    }
}

package "ddd" {
    interface IRepository<ID, T> <<Interface>>
}

package "domain" {
    package "repository" {
        interface IGenreRepo <<Interface>> {
            +findAllKeys() : List<GenreId>
        }
        interface IListOfItemsRepo <<Interface>> {
            +findAll() : Iterable<ListOfItems>
        }
    }
    package "valueobject" {
        class ItemId <<Value Object>>
    }
    package "listofitems" #b0c4d4 {
        class ListOfItems <<Root>> <<Entity>> {
            +getGenreId(): GenreId
            +isPrivate(): boolean
        }
    }
}


GetPublicListsByGenreUI "1"..> "1" GetPublicListsByGenreController : invokes
GetPublicListsByGenreController "1" ..> "1" IListOfItemsRepo : <<use>>
GetPublicListsByGenreController "1" ..> "1" IGenreRepo : <<use>>

IListOfItemsRepo --|> IRepository
IListOfItemsRepo "1"--> "*" ListOfItems : manages
ListOfItems "1" --> "1" ItemId : has

@enduml